# openbox-themes-deb

./: README.md  copyright  install.sh  openbox-themes_1.0.2.dsc  themelist.txt
AbsE/gtk-2.0/: gtkrc
AbsE/openbox-3/: max.xbm  themerc
Airborne/openbox-3/: themerc
Anchos/openbox-3/: themerc
Arctic/openbox-3/: themerc
Ayunb/openbox-3/: max_toggled.xbm  themerc
BBstyle/gtk-2.0/: gtkrc
BBstyle/openbox-3/: max_toggled.xbm  themerc
Bamboo/openbox-3/: themerc
Bear-tangerine/openbox-3/: themerc
Bland/openbox-3/: themerc
Bloohax/openbox-3/: themerc
Carbon/openbox-3/: themerc
Chaos2/openbox-3/: themerc
Cukoo-spit/gtk/: gtkrc
Cukoo-spit/gtk-2.0/: gtkrc  iconrc
Cukoo-spit/icons/: Makefile  Makefile.am  Makefile.in  index.theme  index.theme.in
Cukoo-spit/icons/scalable/: Makefile  Makefile.in
Cukoo-spit/icons/scalable/apps/: Makefile  Makefile.am  Makefile.in
Cukoo-spit/icons/scalable/devices/: Makefile  Makefile.am  Makefile.in
Cukoo-spit/icons/scalable/emblems/: Makefile  Makefile.am  Makefile.in
Cukoo-spit/icons/scalable/filesystems/: Makefile  Makefile.am  Makefile.in
Cukoo-spit/icons/scalable/mimetypes/: Makefile  Makefile.am  Makefile.in
Cukoo-spit/icons/scalable/stock/: Makefile  Makefile.am  Makefile.in
Cukoo-spit/openbox-3/: max_toggled.xbm  themerc
Curdled/openbox-3/: bullet.xbm  themerc
Cyclism/openbox-3/: themerc
Day/openbox-3/: bullet.xbm  desk.xbm  iconify.xbm  max.xbm  themerc
Deep/openbox-3/: themerc
Dyne/openbox-3/: themerc
Ebox/openbox-3/: max.xbm  themerc
Flax/openbox-3/: themerc
Fog-i/openbox-3/: themerc
Fog-maths/gtk/: gtkrc
Fog-maths/gtk-2.0/: gtkrc
Fog-maths/openbox-3/: themerc
Fog-mine/openbox-3/: themerc
Fog-t/openbox-3/: themerc
Fog/openbox-3/: themerc
Fvwmish/openbox-3/: iconify.xbm  max.xbm  themerc
Gd-fog/openbox-3/: close.xbm  close_pressed.xbm  desk_toggled.xbm  max_toggled.xbm  themerc
Gelb-chubby/openbox-3/: themerc
Gelb/gtk/: gtkrc
Gelb/gtk-2.0/: gtkrc
Gelb/openbox-3/: themerc
Gold/openbox-3/: themerc
Greenz/openbox-3/: themerc
I-merry/openbox-3/: themerc
I-merryb/openbox-3/: themerc
Isawagorilla/openbox-3/: iconify_hover.xbm  themerc
Isawagorilla/openbox-3/NewDir/: themerc
Jolly/openbox-3/: themerc
Kong/openbox-3/: themerc
Light-industry/gtk/: gtkrc
Light-industry/gtk-2.0/: gtkrc
Light-industry/openbox-3/: desk.xbm  desk_toggled.xbm  max.xbm  max_toggled.xbm  shade_pressed.xbm  themerc
Loma/gtk-2.0/: gtkrc
Loma/openbox-3/: close.xbm  iconify.xbm  max.xbm  max_toggled.xbm  themerc
M0nst4-sky/openbox-3/: shade.xbm  themerc
Mars/openbox-3/: themerc
Mavos/openbox-3/: max_toggled.xbm  shade_pressed.xbm  themerc
Merrycity/openbox-3/: themerc
Mint/openbox-3/: themerc
Mire_v2_blue/openbox-3/: themerc
Mire_v2_grey/openbox-3/: themerc
Mire_v2_lime/openbox-3/: themerc
Mire_v2_orange/openbox-3/: themerc
Mire_v2_pink/openbox-3/: themerc
Mist-Ashen/gtk-2.0/: gtkrc
Mist-Ashen/openbox-3/: _themerc-nu  themerc
Misted/: changeaccent
Misted/gtk-2.0/: gtkrc
Misted/openbox-3/: themerc
Murrina-Tangoesque/gtk-2.0/: gtkrc
Murrina-Tangoesque/openbox-3/: themerc
Neo/openbox-3/: themerc
Nop/openbox-3/: themerc
Nxpro/openbox-3/: themerc
OB-glossy/openbox-3/: themerc
Ob-in-dustry/openbox-3/: themerc
Ob-in-dustry/openbox-3/OB-in-dustryold/: themerc
Oldred/openbox-3/: themerc
Openbox-Human-Like/openbox-3/: bullet-small.xbm  max.xbm  shade.xbm  themerc
Opensaw/openbox-3/: themerc
Opensaw/sawbox/: themerc
Operation/openbox-3/: themerc
Orange-fog/gtk/: gtkrc
Orange-fog/gtk-2.0/: gtkrc
Orange-fog/openbox-3/: themerc
Palerider/openbox-3/: themerc
Peptide/openbox-3/: desk.xbm  desk_toggled.xbm  max_toggled.xbm  shade.xbm  shade_toggled.xbm  themerc
Planton/openbox-3/: themerc
Rabbit/openbox-3/: themerc
Raffles/openbox-3/: close.xbm  iconify.xbm  max.xbm  themerc
Real-milk/openbox-3/: themerc
Seven/openbox-3/: themerc
Simple-Aubergine/: Simple-Orange  index.theme
Simple-Aubergine/gtk/: gtkrc
Simple-Aubergine/gtk-2.0/: gtkrc
Simple-Aubergine/openbox-3/: themerc
Simple-Generic/: index.theme
Simple-Generic/gtk/: gtkrc
Simple-Generic/gtk-2.0/: gtkrc
Simple-Generic/openbox-3/: themerc
Simple-Green/: index.theme
Simple-Green/gtk/: gtkrc
Simple-Green/gtk-2.0/: gtkrc
Simple-Green/metacity-1/: metacity-theme-1.xml
Simple-Green/openbox-3/: themerc
Simple-Industrial/: Simple-Industrial  index.theme
Simple-Industrial/gtk/: gtkrc
Simple-Industrial/gtk-2.0/: gtkrc
Simple-Industrial/openbox-3/: themerc
Simple-Orange/: README  index.theme
Simple-Orange/gtk/: gtkrc
Simple-Orange/gtk-2.0/: gtkrc
Simple-Orange/openbox-3/: themerc
Simple-Red/: index.theme
Simple-Red/gtk/: gtkrc
Simple-Red/gtk-2.0/: gtkrc
Simple-Red/openbox-3/: themerc
Simple-Slate/: index.theme
Simple-Slate/gtk/: gtkrc
Simple-Slate/gtk-2.0/: gtkrc
Simple-Slate/openbox-3/: themerc
Simple/openbox-3/: themerc
Sodio/openbox-3/: close_hover.xbm  close_pressed.xbm  iconify.xbm  iconify_hover.xbm  iconify_pressed.xbm  max_disabled.xbm  max_hover.xbm  max_toggled.xbm  themerc
Spiffe/gtk-2.0/: gtkrc
Spiffe/openbox-3/: themerc
Spiffish/openbox-3/: themerc
Spiffish/openbox-3/spiffy/: themerc
Spoff/gtk-2.0/: gtkrc
Spoff/openbox-3/: nthemerc  themerc
Squadron/openbox-3/: themerc
SublimeWhite/openbox-3/: themerc
Taqua/gtk-2.0/: gtkrc
Taqua/openbox-3/: themerc
Thebear/openbox-3/: themerc
TropicBomb/gtk-2.0/: gtkrc
TropicBomb/openbox-3/: themerc
Turq/openbox-3/: close_hover.xbm  desk_disabled.xbm  iconify_disabled.xbm  max_disabled.xbm  max_hover.xbm  shade.xbm  shade_toggled.xbm  themerc
Wblue/openbox-3/: bullet.xbm  close.xbm  themerc
Weightless-industry/gtk-2.0/: gtkrc
Weightless-industry/openbox-3/: themerc
Zenyellow/openbox-3/: iconify.xbm  max.xbm  themerc
debian/: changelog  control  dirs  rules
