icondir = $(datadir)/icons/Gorilla/scalable/devices
NULL = 
icon_DATA = \
        gnome-dev-dvd.svg \
        gnome-dev-symlink.svg \
        gnome-dev-cdrom-audio.svg \
        gnome-dev-harddisk.svg \
        gnome-dev-cdrom.svg \
        gnome-dev-network.svg \
        gnome-dev-rw.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
