icondir = $(datadir)/icons/Gorilla/scalable/emblems
NULL = 
icon_DATA = \
        emblem-audio.svg \
        emblem-camera.svg \
        emblem-cool.svg \
        emblem-danger.svg \
        emblem-distinguished.svg \
        emblem-documents.svg \
        emblem-fun.svg \
        emblem-generic.svg \
        emblem-important.svg \
        emblem-noread.svg \
        emblem-nowrite.svg \
        emblem-ohno.svg \
        emblem-package.svg \
        emblem-pictures.svg \
        emblem-relax.svg \
        emblem-symbolic-link.svg \
        emblem-multimedia.svg \
        emblem-urgent.svg \
        emblem-web.svg \
        $(NULL)
EXTRA_DIST = $(icon_DATA)
