icondir = $(datadir)/icons/Gorilla/scalable/stock
icon_DATA = \
stock_about.svg \
stock_add.svg \
stock_attach.svg \
stock_balance.svg \
stock_bold.svg \
stock_book-open.svg \
stock_book.svg \
stock_cancel.svg \
stock_cdrom.svg \
stock_clear.svg \
stock_close.svg \
stock_connect.svg \
stock_convert.svg \
stock_copy.svg \
stock_cut.svg \
stock_delete.svg \
stock_dialog_error.svg \
stock_dialog_info.svg \
stock_dialog_question.svg \
stock_dialog_warning.svg \
stock_disconnect.svg \
stock_dnd_multiple.svg \
stock_dnd.svg \
stock_edit.svg \
stock_execute.svg \
stock_export.svg \
stock_find-and-replace.svg \
stock_find.svg \
stock_floppy.svg \
stock_go-back.svg \
stock_go-down.svg \
stock_go-forward.svg \
stock_goto-bottom.svg \
stock_goto-first.svg \
stock_goto-last.svg \
stock_goto-top.svg \
stock_go-up.svg \
stock_help.svg \
stock_home.svg \
stock_import.svg \
stock_index.svg \
stock_insert-image.svg \
stock_insert-object.svg \
stock_insert-table.svg \
stock_italic.svg \
stock_jump-to.svg \
stock_justify-center.svg \
stock_justify-fill.svg \
stock_justify-left.svg \
stock_justify-right.svg \
stock_line-in.svg \
stock_mic.svg \
stock_missing-image.svg \
stock_new.svg \
stock_no.svg \
stock_ok.svg \
stock_open.svg \
stock_paste.svg \
stock_preferences.svg \
stock_print-preview.svg \
stock_print.svg \
stock_properties.svg \
stock_quit.svg \
stock_redo.svg \
stock_refresh.svg \
stock_remove.svg \
stock_reset.svg \
stock_revert-to-saved.svg \
stock_save-as.svg \
stock_save.svg \
stock_select-color.svg \
stock_select-font.svg \
stock_sort-ascending.svg \
stock_sort-descending.svg \
stock_spell-check.svg \
stock_stop.svg \
stock_strikethrough.svg \
stock_undelete.svg \
stock_underline.svg \
stock_undo.svg \
stock_volume.svg \
stock_yes.svg \
stock_zoom-100.svg \
stock_zoom-fit.svg \
stock_zoom-in.svg \
stock_zoom-out.svg 
 
EXTRA_DIST = $(icon_DATA)
